# rwkv-rs-optimized

./: run_rwkv_0_1b_request.sh  run_rwkv_0_1b_server.sh  run_rwkv_7_2b_request.sh  run_rwkv_7_2b_server.sh
Optimization-docs/: optimization_execution_path_2026-03-17.md  reference_object_mapping_2026-03-16.md  token_shift_analysis_2026-03-15.md  tracy_tmix_findings_2026-03-14.md
crates/rwkv/: Cargo.toml
crates/rwkv-bench/src/: trace.rs
crates/rwkv-infer/src/inference_core/: execution_loop.rs  tokenizer_loop.rs
crates/rwkv-nn/src/cells/: causal.rs
crates/rwkv-nn/src/functions/: normalize.rs  token_shift.rs
crates/rwkv-nn/src/kernels/rapid_sample/: forward.rs  host.rs
crates/rwkv-nn/src/kernels/wkv7_common/: host.rs
crates/rwkv-nn/src/kernels/wkv7_infer/: forward.rs  host.rs
crates/rwkv-nn/src/kernels/wkv7_pretrain/: forward.rs
crates/rwkv-nn/src/kernels/wkv7_statepass/: forward.rs
crates/rwkv-nn/src/kernels/wkv7_statetune/: forward.rs
crates/rwkv-nn/src/layers/: lora.rs
crates/rwkv-nn/src/modules/channel_mixer/: mod.rs
crates/rwkv-nn/src/modules/time_mixer/: gated_readout.rs  mod.rs  weight_prepare.rs
crates/rwkv-train/: Cargo.toml
examples/rwkv-lm/config/infer/: rwkv-lm-0.1b.toml  rwkv-lm-7.2b.toml
examples/rwkv-lm/src/: inferring.rs  model.rs
